# env-wastewater-webapp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  MIGRATION.md  README.md  SPEC.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: session-start-companion-notice.sh
.github/workflows/: _example_hermes_l4_auto_pr.yml  deploy-frontend.yml  e2e.yml  test.yml
app/: __init__.py  main.py
app/api/: dashboard.py  meta.py  pdf_templates.py  readings.py  reference.py  repair_requests.py
app/core/: alert.py  auth.py  computed.py  config.py  db.py  dependencies.py
app/models/: __init__.py  _base.py  app_user.py  carbon_meter.py  carbon_reading.py  equipment.py  location.py  location_category.py  pdf_template.py  personnel.py  repair_request.py  (+2 more)
design/: DESIGN.md  ui-brief.md  uth_ai_evn_system_design_aura_edition.md
docs/: roadmap.md
frontend/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
reports/: phase1-analysis.md  phase2-batch-01.sql  phase2-batch-02.sql  phase2-batch-03.sql  phase2-batch-04.sql  phase2-batch-05.sql  phase2-batch-06.sql  phase2-batch-07.sql  phase2-batch-08.sql  phase2-batch-09.sql  phase2-batch-10.sql  phase2-batch-11.sql  phase2-summary.md  schema-snapshot-live.md  schema-snapshot-p5.md
scripts/: _env.py  apply_migration_api.py  github-pages-spa-redirect.html  introspect_schema.py  introspect_schema_api.py  phase1_analysis.py  phase2_generate_sql.py  supabase_link.sh  test_oauth4_rls_probe.py  test_split_sql.py
tests/: conftest.py  test_alert.py  test_auth.py  test_computed.py  test_endpoints.py  test_health.py  test_schemas.py
(+247 files in other folders)
