[project]
name = "env-wastewater-webapp"
version = "0.2.0"
description = "Supabase-first wastewater monitoring webapp for โรงพยาบาลอุทัย — Python layer is repo scripts only (migrations + schema introspection via the Supabase Management API); the retired FastAPI backend lives on the archive/fastapi-backend branch"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    # HTTP client for the Supabase Management API
    # (scripts/apply_migration_api.py, scripts/introspect_schema_api.py)
    "httpx>=0.27",
]

[tool.uv]
package = false
